--- a/index.html
+++ b/index.html
@@ -3,8 +3,85 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Material icon -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Tailwind cdn -->
     <script src="https://cdn.tailwindcss.com"></script>
+
     <title>Penguin Fashion</title>
+
+    <style>
+      .font-roboto {
+        font-family: "Roboto", sans-serif;
+      }
+
+      .font-bebas {
+        font-family: "Bebas Neue", sans-serif;
+      }
+
+      .hero-height {
+        min-height: calc(100vh - 75px);
+      }
+    </style>
   </head>
-  <body></body>
+  <body class="font-roboto">
+    <header
+      class="flex items-center justify-between px-6 md:px-16 lg:px-24 py-6 bg-[#FFFBF0]"
+    >
+      <div>
+        <a href="#"
+          ><img class="w-[200px]" src="./icons/logo.png" alt="logo"
+        /></a>
+      </div>
+
+      <nav>
+        <ul class="hidden md:flex items-center gap-6 font-medium">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Product</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact Us</a></li>
+        </ul>
+
+        <div class="block md:hidden cursor-pointer">
+          <span class="material-symbols-outlined text-[28px]"> menu_open </span>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section
+        class="hero-height flex items-center gap-48 px-6 md:px-16 lg:px-24 bg-[#FFFBF0]"
+      >
+        <div>
+          <h1 class="text-[#363958] text-7xl font-bebas mb-2">
+            <span class="text-[#FABE4C]">Be the Penguins</span><br />of Winter
+          </h1>
+          <p class="text-[#3E3E3E] leading-6 mb-2 max-w-sm">
+            Lorem Ipsum is simply dummy text of the printing and typesetting
+            industry.
+          </p>
+          <a
+            class="flex items-center gap-1 px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+            href="#"
+            ><span class="material-symbols-outlined"> shopping_cart </span> BUY
+            NOW</a
+          >
+        </div>
+        <div><img src="./images/model.png" alt="Images of a model" /></div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
