--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
     <main>
       <section
-        class="hero-height flex items-center gap-48 px-6 md:px-16 lg:px-24 bg-[#FFFBF0]"
+        class="hero-height flex flex-col md:flex-row items-center gap-10 md:gap-48 px-6 md:px-16 lg:px-24 bg-[#FFFBF0] mt-12 md:mt-0"
       >
         <div>
           <h1 class="text-[#363958] text-7xl font-bebas mb-2">
@@ -73,13 +73,127 @@
             industry.
           </p>
           <a
-            class="flex items-center gap-1 px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+            class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
             href="#"
-            ><span class="material-symbols-outlined"> shopping_cart </span> BUY
-            NOW</a
+            ><span class="material-symbols-outlined"> shopping_cart </span>
+            <span>BUY NOW</span></a
           >
         </div>
         <div><img src="./images/model.png" alt="Images of a model" /></div>
+      </section>
+
+      <section class="px-6 md:px-16 lg:px-24 mt-20 md:mt-12 mb-24">
+        <h2
+          class="text-[#363958] text-5xl text-center md:text-left font-bebas mb-5"
+        >
+          W0Man Jacket
+        </h2>
+        <div
+          class="grid grid-cold-1 md:grid-cols-2 lg:grid-cols-3 gap-8 justify-center"
+        >
+          <!-- jacket 1 -->
+          <div class="p-5 shadow-sm max-w-[400px]">
+            <div
+              class="bg-[#F1F1F1] rounded-2xl p-5 flex items-center justify-center mb-4"
+            >
+              <img
+                class="max-w-[280px] h-[280px]"
+                src="./images/jacket-1.png"
+                alt="jacket"
+              />
+            </div>
+            <div class="p-1">
+              <h3 class="text-[#363958] text-2xl font-bold">
+                Yellow Coat Jacket
+              </h3>
+              <p class="text-[#3E3E3E] leading-6 mb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex items-center justify-between">
+                <h4 class="text-[#FABE4C] text-4xl font-black space-y-3">
+                  $234
+                </h4>
+                <a
+                  class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                  href="#"
+                  ><span class="material-symbols-outlined">
+                    shopping_cart
+                  </span>
+                  <span>BUY NOW</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- jacket 2 -->
+          <div class="p-5 shadow-sm max-w-[400px]">
+            <div
+              class="bg-[#F1F1F1] rounded-2xl p-5 flex items-center justify-center mb-4"
+            >
+              <img
+                class="max-w-[280px] h-[280px]"
+                src="./images/jacket-2.png"
+                alt="jacket"
+              />
+            </div>
+            <div class="p-1">
+              <h3 class="text-[#363958] text-2xl font-bold">Ladies Jacket</h3>
+              <p class="text-[#3E3E3E] leading-6 mb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex items-center justify-between">
+                <h4 class="text-[#FABE4C] text-4xl font-black space-y-3">
+                  $234
+                </h4>
+                <a
+                  class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                  href="#"
+                  ><span class="material-symbols-outlined">
+                    shopping_cart
+                  </span>
+                  <span>BUY NOW</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- jacket 3 -->
+          <div class="p-5 shadow-sm max-w-[400px]">
+            <div
+              class="bg-[#F1F1F1] rounded-2xl p-5 flex items-center justify-center mb-4"
+            >
+              <img
+                class="max-w-[280px] h-[280px]"
+                src="./images/jacket-3.png"
+                alt="jacket"
+              />
+            </div>
+            <div class="p-1">
+              <h3 class="text-[#363958] text-2xl font-bold">
+                Woman Leather Jacket
+              </h3>
+              <p class="text-[#3E3E3E] leading-6 mb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex items-center justify-between">
+                <h4 class="text-[#FABE4C] text-4xl font-black space-y-3">
+                  $234
+                </h4>
+                <a
+                  class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                  href="#"
+                  ><span class="material-symbols-outlined">
+                    shopping_cart
+                  </span>
+                  <span>BUY NOW</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <footer></footer>
