--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div><img src="./images/model.png" alt="Images of a model" /></div>
       </section>
 
+      <!-- MANS JACKET -->
       <section class="px-6 md:px-16 lg:px-24 mt-20 md:mt-12 mb-24">
         <h2
           class="text-[#363958] text-5xl text-center md:text-left font-bebas mb-5"
@@ -173,6 +174,122 @@
             <div class="p-1">
               <h3 class="text-[#363958] text-2xl font-bold">
                 Woman Leather Jacket
+              </h3>
+              <p class="text-[#3E3E3E] leading-6 mb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex items-center justify-between">
+                <h4 class="text-[#FABE4C] text-4xl font-black space-y-3">
+                  $234
+                </h4>
+                <a
+                  class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                  href="#"
+                  ><span class="material-symbols-outlined">
+                    shopping_cart
+                  </span>
+                  <span>BUY NOW</span></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="px-6 md:px-16 lg:px-24 mt-20 md:mt-12 mb-24">
+        <h2
+          class="text-[#363958] text-5xl text-center md:text-left font-bebas mb-5"
+        >
+          Man Jacket
+        </h2>
+        <div
+          class="grid grid-cold-1 md:grid-cols-2 lg:grid-cols-3 gap-8 justify-center"
+        >
+          <!-- jacket 4 -->
+          <div class="p-5 shadow-sm max-w-[400px]">
+            <div
+              class="bg-[#F1F1F1] rounded-2xl p-5 flex items-center justify-center mb-4"
+            >
+              <img
+                class="max-w-[280px] h-[280px]"
+                src="./images/jacket-4.png"
+                alt="jacket"
+              />
+            </div>
+            <div class="p-1">
+              <h3 class="text-[#363958] text-2xl font-bold">
+                Snowboard Jacket Mens
+              </h3>
+              <p class="text-[#3E3E3E] leading-6 mb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex items-center justify-between">
+                <h4 class="text-[#FABE4C] text-4xl font-black space-y-3">
+                  $234
+                </h4>
+                <a
+                  class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                  href="#"
+                  ><span class="material-symbols-outlined">
+                    shopping_cart
+                  </span>
+                  <span>BUY NOW</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- jacket 5 -->
+          <div class="p-5 shadow-sm max-w-[400px]">
+            <div
+              class="bg-[#F1F1F1] rounded-2xl p-5 flex items-center justify-center mb-4"
+            >
+              <img
+                class="max-w-[280px] h-[280px]"
+                src="./images/jacket-5.png"
+                alt="jacket"
+              />
+            </div>
+            <div class="p-1">
+              <h3 class="text-[#363958] text-2xl font-bold">
+                Man Leather Jackets
+              </h3>
+              <p class="text-[#3E3E3E] leading-6 mb-2">
+                Lorem Ipsum is simply dummy text of the printing and typesetting
+                industry.
+              </p>
+              <div class="flex items-center justify-between">
+                <h4 class="text-[#FABE4C] text-4xl font-black space-y-3">
+                  $234
+                </h4>
+                <a
+                  class="flex items-center gap-1 w-fit px-6 py-3 font-medium leading-6 text-white rounded-lg bg-gradient-to-r from-[#A4BC46] to-[#85A019]"
+                  href="#"
+                  ><span class="material-symbols-outlined">
+                    shopping_cart
+                  </span>
+                  <span>BUY NOW</span></a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- jacket 6 -->
+          <div class="p-5 shadow-sm max-w-[400px]">
+            <div
+              class="bg-[#F1F1F1] rounded-2xl p-5 flex items-center justify-center mb-4"
+            >
+              <img
+                class="max-w-[280px] h-[280px]"
+                src="./images/jacket-6.png"
+                alt="jacket"
+              />
+            </div>
+            <div class="p-1">
+              <h3 class="text-[#363958] text-2xl font-bold">
+                Man Casual Jackets
               </h3>
               <p class="text-[#3E3E3E] leading-6 mb-2">
                 Lorem Ipsum is simply dummy text of the printing and typesetting
