--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       .hero-height {
         min-height: calc(100vh - 75px);
       }
+
+      .shadow-card {
+        box-shadow: 0px 10px 30px 0px rgba(0, 0, 0, 0.05);
+      }
     </style>
   </head>
   <body class="font-roboto">
@@ -310,6 +314,60 @@
               </div>
             </div>
           </div>
+        </div>
+      </section>
+
+      <!-- FEATURES -->
+      <section
+        class="flex flex-col-reverse md:flex-row items-center gap-24 md:gap-0 lg:gap-24 px-6 md:px-16 lg:px-24 mt-20 md:mt-12 mb-24"
+      >
+        <div class="space-y-4">
+          <div
+            class="flex-1 flex flex-col md:flex-row text-center md:text-left items-center gap-8 px-7 py-5 rounded-l-3xl shadow-card"
+          >
+            <img class="w-[84px]" src="./icons/house.png" alt="" />
+            <div class="max-w-[260px]">
+              <h4 class="text-[#363958] font-bold text-2xl mb-3">
+                Find the Perfect Fit
+              </h4>
+              <p class="text-[#3E3E3E] leading-6">
+                Everybody is different, which is why we offer styles for every
+                body.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="flex-1 flex items-center flex-col md:flex-row text-center md:text-left gap-8 px-7 py-5 rounded-l-3xl shadow-card"
+          >
+            <img class="w-[84px]" src="./icons/box.png" alt="" />
+            <div class="max-w-[260px]">
+              <h4 class="text-[#363958] font-bold text-2xl mb-3">
+                Free Exchanges
+              </h4>
+              <p class="text-[#3E3E3E] leading-6">
+                One of the many reasons you can shop with peace of mind.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="flex-1 flex items-center flex-col md:flex-row text-center md:text-left gap-8 px-7 py-5 rounded-l-3xl shadow-card"
+          >
+            <img class="w-[84px]" src="./icons/question.png" alt="" />
+            <div class="max-w-[260px]">
+              <h4 class="text-[#363958] font-bold text-2xl mb-3">
+                Contact Our Seller
+              </h4>
+              <p class="text-[#3E3E3E] leading-6">
+                They are here to help you. That's quite literally what we pay
+                them for.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="flex-1">
+          <img class="w-full" src="./images/shopping.png" alt="shopping img" />
         </div>
       </section>
     </main>
